...

  const obsCreateItems = useMemo( ( ) => ( {
    aiCamera: {
      text: t( "ID-in-Camera" ),
      icon: "aicamera",
      onPress: ( ) => navAndCloseBottomSheet( "Camera", { camera: "AI" } ),
      testID: "aicamera-button",
      accessibilityLabel: t( "AI-Camera" ),
      accessibilityHint: t( "Navigates-to-AI-camera" ),
    },
    standardCamera: {
      text: t( "Take-photos" ),
      icon: "camera",
...
